# AutoRAG

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  README.md  build_and_push.sh  dev_requirements.txt  docker-compose.yml  genindex.html  index.html  install.html  local_model.html  local_requirements.txt  migration.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_dashboard.sh  search.html  searchindex.js  setup.py  sitemap.xml  structure.html  test.yaml  test_your_rag.html  troubleshooting.html  tutorial.html
api/: .env.dev  (+8 more)
autorag/: .dockerignore  .gitignore  Dockerfile.base  Dockerfile.gpu  VERSION  __init__.py  build_and_push.sh  chunker.py  cli.py  dashboard.py  deploy.py  evaluator.py  node_line.py  parse.py  parser.py  pyproject.toml  requirements.txt  strategy.py  support.py  validator.py  web.py
autorag/autorag/: VERSION  __init__.py  cli.py  evaluator.py  node_line.py  parser.py  strategy.py  support.py  validator.py  web.py
autorag/autorag/client/: __init__.py  client.py  exceptions.py  models.py
autorag/autorag/client/example/: ex1.py  requirements.txt
autorag/autorag/data/: __init__.py  caption_summarizer.py
autorag/autorag/data/chunk/: base.py  langchain_chunk.py
autorag/autorag/data/parse/: __init__.py  clova.py  langchain_parse.py  llamaparse.py  run.py  table_hybrid_parse.py
autorag/autorag/data/qa/: __init__.py  sample.py  schema.py
autorag/autorag/data/utils/: util.py
autorag/autorag/deploy/: __init__.py  api.py  base.py  gradio.py  swagger.yml
autorag/autorag/embedding/: base.py  vllm.py
autorag/autorag/evaluation/: __init__.py  generation.py  retrieval_contents.py  util.py
autorag/autorag/evaluation/metric/: __init__.py  generation.py  retrieval.py  util.py
autorag/autorag/nodes/generator/: __init__.py  base.py  llama_index_llm.py  openai_llm.py  run.py  vllm.py
autorag/autorag/nodes/hybridretrieval/: base.py  hybrid_cc.py  hybrid_rrf.py  run.py
autorag/autorag/nodes/lexicalretrieval/: __init__.py  bm25.py  run.py
autorag/autorag/schema/: __init__.py  metricinput.py  module.py
autorag/autorag/utils/: cast.py  preprocess.py  util.py
autorag/autorag/vectordb/: __init__.py  base.py  chroma.py  couchbase.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
autorag/client/example/: ex1.py
autorag/data/: __init__.py  caption_summarizer.py
autorag/data/beta/: extract_evidence.py  schema.py
autorag/data/chunk/: __init__.py  base.py  langchain_chunk.py  llama_index_chunk.py  run.py
autorag/data/corpus/: __init__.py  langchain.py  llama_index.py
autorag/data/parse/: __init__.py  base.py  clova.py  clova_ocr.py  langchain_parse.py  llamaparse.py  run.py  table_hybrid_parse.py
autorag/data/qa/: schema.py
autorag/data/qacreation/: __init__.py  base.py  llama_index.py  ragas.py  simple.py
autorag/data/utils/: llamaindex.py  util.py
autorag/db/: __init__.py  repository.py  schema.py  uow.py
autorag/deploy/: __init__.py  api.py  base.py  gradio.py  swagger.yml
autorag/embedding/: base.py  huggingface.py  openai.py  vllm.py
autorag/evaluate/: __init__.py  generation.py  retrieval.py  retrieval_contents.py  util.py
autorag/evaluate/metric/: __init__.py  generation.py  retrieval.py  retrieval_contents.py  retrieval_no_gt.py  util.py
autorag/evaluation/: generation.py  retrieval.py  retrieval_contents.py  util.py
autorag/evaluation/metric/: __init__.py  a_agt.py  deepeval_prompt.py  generation.py  p_pgt.py  retrieval.py  retrieval_contents.py  util.py
autorag/nodes/: util.py
autorag/nodes/generator/: __init__.py  ag2.py  base.py  exo_openailike_llm.py  litellm_client.py  llama_index_llm.py  minimax_llm.py  openai.py  openai_llm.py  refine.py  run.py  vllm.py  vllm_api.py
autorag/nodes/hybridretrieval/: __init__.py  base.py  hybrid_cc.py  hybrid_rrf.py
autorag/nodes/lexicalretrieval/: bm25.py  run.py
autorag/nodes/passageaugmenter/: __init__.py  base.py  pass_passage_augmenter.py  prev_next_augmenter.py  recursive_chunk.py  run.py
autorag/nodes/passagecompressor/: __init__.py  base.py  llmlingua.py  longllmlingua.py  pass_compressor.py  refine.py  run.py  tree_summarize.py
autorag/nodes/passagefilter/: __init__.py  base.py  ner_pii_masking.py  pass_passage_filter.py  percentile_cutoff.py  recency.py  run.py  similarity_percentile_cutoff.py  similarity_threshold_cutoff.py  threshold_cutoff.py  time.py
autorag/nodes/passagereranker/: UPR.py  __init__.py  base.py  cohere.py  colbert.py  flag_embedding.py  flag_embedding_llm.py  flashrank.py  jina.py  koreranker.py  mixedbreadai.py  monot5.py  mxbai.py  nvidia.py  openvino.py  pass_reranker.py  rankgpt.py  run.py  sentence_transformer.py  time_reranker.py  upr.py  voyageai.py
autorag/nodes/promptmaker/: __init__.py  base.py  chat_fstring.py  fstring.py  long_context_reorder.py  run.py  window_replacement.py
autorag/nodes/queryexpansion/: __init__.py  base.py  hyde.py  multi_query_expansion.py  pass_query_expansion.py  query_decompose.py  run.py
autorag/nodes/retrieval/: __init__.py  base.py  bm25.py  hybrid_cc.py  hybrid_dbsf.py  hybrid_rrf.py  hybrid_rsf.py  recursive_chunk.py  run.py  vectordb.py
autorag/nodes/semanticretrieval/: __init__.py  run.py  vectordb.py
autorag/postgresql/: docker-compose.yml
autorag/projects/tutorial_1/: config.yaml
autorag/sample_config/chunk/: chunk_full.yaml  chunk_ko.yaml  simple_chunk.yaml
autorag/sample_config/parse/: all_files_full.yaml  parse_full.yaml  parse_hybird.yaml  parse_ko.yaml  parse_multimodal.yaml  parse_ocr.yaml  simple_parse.yaml
autorag/sample_config/rag/: extracted_sample.yaml  full.yaml
autorag/sample_dataset/: README.md
autorag/sample_dataset/hotpotqa/: load_hotpotqa_dataset.py
autorag/schema/: __init__.py  base.py  data.py  metricinput.py  module.py  node.py  payload.py
autorag/utils/: __init__.py  cast.py  preprocess.py  util.py  validate.py
autorag/vectordb/: __init__.py  base.py  chroma.py  couchbase.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
(+1190 files in other folders)
